# mi-reminder

./: .gitignore  Cargo.toml
src/: main.rs
