[package]
name = "mi-reminder"
version = "0.1.0"
edition = "2021"
description = "A reminder bot for Misskey"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
